# CoEval

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  conftest.py  keepalive.py  pyproject.toml
Code/: README.md
Code/analyzer/: calibration.py  loader.py  main.py  metrics.py  paper_tables.py
Code/runner/: cli.py  config.py  label_eval.py  metric_judge.py  runner.py
Config/: README.md  provider_pricing.yaml
Runs/: README.md
Tests/: README.md  test_structural_integrity.py
analysis/: README.md  main.py  paper_tables.py
archive/: fix_imports.py  fix_imports_dir.py  temp_scan.py  temp_scan2.py
benchmark/: README.md  compute_scores.py  education.yaml  emit_datapoints.py  medium_benchmark.yaml  mixed.yaml  mixed_description.html  paper_benchmarks.yaml  paper_dual_track.yaml  paper_dual_track_description.html  provider_pricing.yaml  setup_mixed.py  sota_models.yaml
coeval/: cli.py  config.py  prompts.py  runner.py  storage.py
docs/: README.md  cli_reference.md  concepts.md  developer_guide.md  doc_plan.md  extracting_benchmarks.md  running_experiments.md  spec_claude.md  testing.md  tutorial.md  write_guide.py
examples/: README.md  local_smoke_test.yaml  mixed_backend_test.yaml
experiments/: README.md  cli.py  config.py  exceptions.py  logger.py  prompt_format_test.py  prompts.py  results.json  runner.py  storage.py
manuals/: 01_running_experiments.md  02_benchmark_experiments.md  03_analysis_and_reporting.md  04_provider_pricing.md  README.md
paper/: 03_methodology.md  04_results.md  README.md  gen_paper_report.py
scripts/: README.md  prompt_format_test.py  run_tests_safe.py
stdbenchmarks/: README.md  download_benchmarks.py
tests/: test_analyze_reports.py  test_config.py  test_loader.py  test_metrics.py  test_prompts.py  test_storage.py  test_utils.py
(+714 files in other folders)
