[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coeval"
version = "0.1.0"
description = "CoEval: Self-evaluating LLM ensemble benchmarking system (EER MVP)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
huggingface = [
    "transformers>=4.40",
    "torch>=2.0",
]

[project.scripts]
coeval = "coeval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coeval*"]
